gcc/testsuite/g++.dg/modules/legacy-0a.H
// { dg-additional-options "-fmodule-legacy=<sys" }
// { dg-error "badly quoted" "" { target *-*-* } 0 }
